close #423 keep optimizing the board

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -9,13 +9,20 @@ sitemap: false
         <div class="col-lg-12 col-xs-12 msgBoard">
             <div class="col-12 project-status">
                 <div class="project-status-box">
-                <p>Project status:</p>
-                <p class="cost-name box-title">{{ page.name }}</p></div>
+
+               <p class="cost-name box-title">{{ page.name }}</p></div>
+               
+               <div class="status-text">
+                   {{ page.content }}
+               </div>
+
+               <!--  <p>Project status:</p>
+            
                 <div class="accordion" id="status-messages">
 
    
                     
-                  </div>
+                  </div> -->
                   </div>
             </div>
 
@@ -23,7 +30,7 @@ sitemap: false
                 <div class="col-12">
                     <div class="row justify-content-center">
                         <div class="col-lg-10 col-md-10">
-                            <p>you are singed in as:</p>
+                            <p>You are singed in as:</p>
                         </div>
 
                         <div class="col-lg-10 col-md-10"> 
@@ -59,23 +66,23 @@ sitemap: false
            
 
 
-            <div class="col-lg-4 col-xs-12 zenbox">
+          <!--   <div class="col-lg-4 col-xs-12 zenbox">
                 <a target="_blank" class="zenhub-link" href="#">
                     <div class="col-12 zenhub">
                         <p class="box-title">Zenhub</p>
                         <p>View Zenhub Board</p>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
-            <div class="col-lg-8 col-xs-12 todo">
+          <!--   <div class="col-lg-8 col-xs-12 todo">
                 <div class="col-12">
                     <p>All issues in To Do & Up Next:</p>
                     <div class="todo-list">
 
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-lg-4 col-xs-12 storypoint">
                 <div class="col-12 storypoints">
@@ -87,7 +94,7 @@ sitemap: false
 
 
 
-            <div class="col-lg-6 col-xs-12 pipeline">
+            <div class="col-lg-12 col-xs-12 pipeline">
                 <div class="col-12">
                     <p>Pipeline:</p>
                     <div class="pipeline-box"></div>
@@ -96,14 +103,14 @@ sitemap: false
 
 
 
-            <div class="col-lg-6 col-xs-12 cont">
+            <!-- <div class="col-lg-6 col-xs-12 cont">
                 <div class="col-12">
                     <p>contributors:</p>
                     <div class="contributors">
 
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
