--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -19,62 +19,77 @@
     {% endcapture %}
 
     <footer>
-      
-    
-        <div class="footer-row">
-          <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
-          <div class="footer-list">
-            <h1>Navigation</h1>
-            <a href="/#home" data-proofer-ignore>Prolike</a>
-            <a href="/#why" data-proofer-ignore>Why</a>
-            <a href="/#how" data-proofer-ignore>How</a>
-            <a href="/#what" data-proofer-ignore>What</a>
-            {% assign sorted_navi = site.pages | sort: 'order' %}
-            {% for page in sorted_navi %}
-            {% if page.navigation == true %}
-            <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a>
+
+      <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
+      <div class="footer-row">
+
+        <div class="footer-list">
+          <h1>Partners</h1>
+          {% for partner in site.partners %}
+            {% if partner.show == true %}
+              <img src="{{ partner.image }}" alt="{{ partner.title }}">
             {% endif %}
-            {% endfor %}
-          </div>
-          <div class="footer-list">
-            <h1>Our Credo</h1>
-            <a href="/anything/how-we-work/" data-proofer-ignore>How We Work</a>
-            <p>Serverless</p>
-            <p>Autonomation</p>
-            <p>Talent Development</p>
-            <p>Docker</p>
-            <p>Kaizen</p>
-          </div>
-          <div class="footer-list">
-            <h1>Services</h1>
-            {% for post in site.posts %}
-            {% if post.service %}
-            <a href="{{ post.url}}">{{ post.service }}</a>
-            {% endif %}
-            {% endfor %}
-            <a href="/profeed/" data-proofer-ignore>Profeed</a>
-            <p>Team Resources</p>
-            <p>Research</p>
-          </div>
-          <div class="footer-list">
-            <h1>Contact</h1>
-            <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            <a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/" target="_blank" data-proofer-ignore>VAT No.: 39464101</a>
-            <a href="tel:+45 20 872 530">+45 20 872 530</a>
-            <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
-            <p>3450 Allerød</p>
-          </div>
+          {% endfor %}
         </div>
-      
-        
+
+        <div class="footer-list">
+          <h1>Navigation</h1>
+          <a href="/#home" data-proofer-ignore>Prolike</a>
+          <a href="/#why" data-proofer-ignore>Why</a>
+          <a href="/#how" data-proofer-ignore>How</a>
+          <a href="/#what" data-proofer-ignore>What</a>
+          {% assign sorted_navi = site.pages | sort: 'order' %}
+          {% for page in sorted_navi %}
+          {% if page.navigation == true %}
+          <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a>
+          {% endif %}
+          {% endfor %}
+        </div>
+
+        <div class="footer-list">
+          <h1>Our Credo</h1>
+          <a href="/anything/how-we-work/" data-proofer-ignore>How We Work</a>
+          <p>Serverless</p>
+          <p>Autonomation</p>
+          <p>Talent Development</p>
+          <p>Docker</p>
+          <p>Kaizen</p>
+        </div>
+
+        <div class="footer-list">
+          <h1>Services</h1>
+          {% for post in site.posts %}
+          {% if post.service %}
+          <a href="{{ post.url}}">{{ post.service }}</a>
+          {% endif %}
+          {% endfor %}
+          <a href="/profeed/" data-proofer-ignore>Profeed</a>
+          <p>Team Resources</p>
+          <p>Research</p>
+        </div>
+
+        <div class="footer-list">
+          <h1>Contact</h1>
+          <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
+          <a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/"
+            target="_blank" data-proofer-ignore>VAT No.: 39464101</a>
+          <a href="tel:+45 20 872 530">+45 20 872 530</a>
+          <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
+          <p>3450 Allerød</p>
+        </div>
+      </div>
+
+
       <div class="bottom-bar">
         <span>© 2019 Prolike</span>
         <span>
           <a href="https://twitter.com/prolike5" target="_blank" data-proofer-ignore><i class="fab fa-twitter"></i></a>
           <a href="#" target="_blank" data-proofer-ignore><i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.instagram.com/prolike_io/" target="_blank" data-proofer-ignore><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/prolike_io/" target="_blank" data-proofer-ignore><i
+              class="fab fa-instagram"></i></a>
           <a href="https://github.com/prolike" target="_blank" data-proofer-ignore><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/company/prolike/" target="_blank" data-proofer-ignore><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/company/prolike/" target="_blank" data-proofer-ignore><i
+              class="fab fa-linkedin-in"></i></a>
         </span>
       </div>
     </footer>
