--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -22,8 +22,9 @@ layout: page
                 {% for event in site.events %}
                 {% if page.title != event.title %}
                 {% if event.lang-id == switchlang %}
-                <a href="{{ event.url }}" style="float: right"><span
-                        class="flag-icon flag-icon-{{ event.lang }} flag-icon-squared"></span></a>
+                <a href="{{ event.url }}" style="float: right">
+                    <span class="flag-icon flag-icon-{{ event.lang }} flag-icon-squared"></span>
+                </a>
                 {% endif %}
                 {% endif%}
                 {% endfor %}
