close #433 adjust social media buttons

--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -79,12 +79,15 @@
         width: auto;
         margin: 0;
         padding: 0;
+
+        a {
+            margin-right: 15px;
+        }
       
         .fab {
           color: black;
           opacity: 0.5;
-          padding-right: 10px;
-          font-size: 15px;
+          font-size: 25px;
         }
       
         .fab:hover {
