--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,7 +1,6 @@
 
-.services {
-    margin: 25% auto 0 auto;
-    text-align: center;
+.service {
+    padding: 20vh 20vh;
     height: auto;
     width: auto;
     align-items: center;
@@ -9,15 +8,13 @@
     .service-heading {
         margin-left: auto;
         margin-right: auto;
-        padding-top: 0;
+        //padding-top: 0;
         font-weight: 600;
     
     }
 
     p {
-        max-width: 400px;
-        margin: auto;
-        padding-top: 20px;
+        padding-top: 10px;
     }
 
 .service-boxes {
@@ -28,11 +25,14 @@
     .service-box {
     color: white;
     align-items: center;
+    text-align: center;
     background-color: $prolikeblue;
+    padding: 15px;
+    padding: 30px;
     margin: 30px;
-    width: 300px;
-    height: 200px;
-    border-radius: 5px;
+    height: 25vh;
+    width: 30vh;
+    border-radius: 10px;
 
     .post-link, .post-link:hover {
         color: white;
@@ -48,10 +48,10 @@
             color: $prolikeyellow;
         }
 
-        h3 {
+        h4 {
             text-transform: uppercase;
-            font-size: 40px;
-            font-weight: 600;
+            font-weight: bold;
+            word-wrap: break-word;
             color: white;
         }
 
@@ -65,9 +65,8 @@
 
 }
 @media only screen and (min-width: 600px) {
-    .services {
-        margin: 10% auto 0 auto;
-        text-align: center;
+    .service {
+        padding-top: 20vh 20vh;
         height: 100vh;
         width: auto;
         align-items: center;
