--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,4 +1,3 @@
-
 .service {
     padding: 20vh 20vh;
     height: auto;
@@ -10,65 +9,102 @@
         margin-right: auto;
         //padding-top: 0;
         font-weight: 600;
-    
+
     }
 
     p {
         padding-top: 10px;
     }
 
-.service-boxes {
-    padding: 50px;
-    align-items: center;
-
-
-    .service-box {
-    color: white;
-    align-items: center;
-    text-align: center;
-    background-color: $prolikeblue;
-    padding: 15px;
-    padding: 30px;
-    margin: 30px;
-    height: 25vh;
-    width: 30vh;
-    border-radius: 10px;
-
-    .post-link, .post-link:hover {
-        color: white;
-        text-decoration: none;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
+    .service-boxes {
+        padding: 50px;
         align-items: center;
 
-        .service-icon {
-            font-size: 60px;
-            margin: 20px 25px;
-            color: $prolikeyellow;
+
+        .service-box {
+            color: white;
+            align-items: center;
+            text-align: center;
+            background-color: $prolikeblue;
+            padding: 15px;
+            margin: 30px;
+            height: 20vh;
+            width: 25vh;
+            border-radius: 10px;
+
+            .post-link,
+            .post-link:hover {
+                color: white;
+                text-decoration: none;
+                height: 100%;
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+
+                .service-icon {
+                    font-size: 60px;
+                    margin: 20px 25px;
+                    color: $prolikeyellow;
+                }
+
+                h4 {
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    word-wrap: break-word;
+                    color: white;
+                }
+
+            }
+
+
+
         }
 
-        h4 {
+    }
+
+    .service-info {
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+        margin-bottom: 5vh;
+        border-top: 1px solid rgba(0, 0, 0, 0.25);
+
+        h2 {
             text-transform: uppercase;
             font-weight: bold;
-            word-wrap: break-word;
-            color: white;
         }
-
     }
 
-   
-
+    .service-info:last-of-type {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.25);
     }
 
 }
 
-}
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 1024px) {
     .service {
-        padding-top: 20vh 20vh;
-        height: 100vh;
-        width: auto;
-        align-items: center;
+        padding: 10vh 5vh;
+
+        .service-boxes {
+
+            .service-box {
+                width: 100%;
+                height: 100%;
+                margin: unset;
+                margin-top: 30px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .service {
+        padding: 20vh 0vh;
+        height: auto;
+        width: 100%;
+        text-align: center;
+
+        .service-info {
+            text-align: left;
+        }
     }
 }
