--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -9,21 +9,18 @@ sitemap: false
         <div class="col-lg-12 col-xs-12 msgBoard">
             <div class="col-12 project-status">
                 <div class="project-status-box">
-
-               <p class="cost-name box-title">{{ page.name }}</p></div>
-               
-               <div class="status-text">
-                   {{ page.content }}
+                    <p class="cost-name box-title">{{page.name}}</p>
+                    <p>Status</p>
                </div>
+               
 
-               <!--  <p>Project status:</p>
             
                 <div class="accordion" id="status-messages">
 
    
                     
-                  </div> -->
                   </div>
+                </div>
             </div>
 
             <div class="col-lg-4 col-xs-12 profile">
