close #446 make services link to a google form

--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -1,18 +1,18 @@
 ---
 layout: page
-title: Services
 ---
+
 <div class="service">
 
     <div class="row">
         <div class="col-lg-6 col-12">
-            <h1 class="service-heading">Our services</h1>
+            <h1 class="service-heading">{{ page.title }}</h1>
         </div>
     </div>
 
     <div class="row">
         <div class="col-lg-10 col-12 info">
-            <p>In Prolike we offer services made with the concept of lean, wether we create websites or software</p>
+            <p>{{ page.text }}</p>
         </div>
     </div>
 
