--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -80,6 +80,11 @@
 
 }
 
+.idk {
+    position: absolute;
+    top: -10vh;
+}
+
 @media only screen and (max-width: 1024px) {
     .service {
         padding: 10vh 5vh;
