--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -1,7 +1,7 @@
 .posts-container {
     height: auto;
     width: 100%;
-    padding: 18vh 20vh 10vh 20vh;
+    padding: 10vh 20vh 10vh 20vh;
     background: $prolikeblue;
 
     .wrapper {
@@ -17,6 +17,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2);
     }
 
     .card-body {
@@ -58,6 +59,25 @@
 .hidden {
     display: none !important;
     visibility: hidden !important;
+}
+
+.anything-overview {
+    padding: 5vh 0 7.5vh 0;
+
+    h1 {
+        font-size: 4vh;
+        color: white;
+        font-family: 'Bebas Neue', cursive;
+        margin: 0;
+        margin-bottom: 2.5vh;
+    }
+
+    hr {
+        width: 100%;
+        height: 1.5px;
+        background: rgba(107, 125, 153, .15);
+        margin: 0;
+    }
 }
 
 // individual story site
@@ -172,11 +192,7 @@
         .events-image {
             height: 30vh;
         }
-
-
     }
-
-
 }
 
 @media only screen and (max-width: 1200px) {
@@ -214,6 +230,10 @@
     .posts-container {
         padding: 15vh 2vh 10vh 2vh;
 
+        .anything-overview h1 {
+            font-size: 35px;
+        }
+
         .wrapper {
             grid-template-columns: 1fr;
         }
@@ -223,12 +243,16 @@
         }
 
         .card-body {
-            padding: 20px 0 10px 0;
+            padding: 10px 0;
 
             h5 {
-                font-size: 30px;
+                font-size: 25px;
                 line-height: 35px;
-                padding: 20px 0 5px 0;
+                padding: 5px 0;
+            }
+
+            p {
+                font-size: 14px;
             }
 
             .tags {
