--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -18,66 +18,34 @@
 {%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
     {% endcapture %}
 
-    <footer>
+<footer>
+  <hr>
+  <div class="left">
+    <h1>Are <a class="yellow-text" href="/flow/">you</a> our next aqquantince?<br>Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or come <a class="yellow-text" href="/callme/">swing by</a> for a chat!</h1>
+    <span>
+      {% assign sorted_navi = site.pages | sort: 'order' %}
+      {% for page in sorted_navi %}
+      {% if page.navigation == true %}
+      <li><a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
+      {% endif %}
+      {% endfor %}
+      <li><a href="#" data-proofer-ignore>Partners</a></li>
+      <li><a href="/callme/">Contact</a></li>
+    </span>
+  </div>
 
-      <div class="footer-row">
-        <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
-
-        <div class="footer-list">
-          <h1>Navigation</h1>
-          <a href="/#home" data-proofer-ignore>Home</a>
-          {% assign sorted_navi = site.pages | sort: 'order' %}
-          {% for page in sorted_navi %}
-          {% if page.navigation == true %}
-          <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a>
-          {% endif %}
-          {% endfor %}
-        </div>
-
-        <div class="footer-list">
-          <h1>Partners</h1>
-          {% for partner in site.partners %}
-            {% if partner.show == true %}
-            <a href="{{ partner.partner-url }}" data-proofer-ignore>
-              <img src="{{ partner.image }}" alt="{{ partner.title }}">
-            </a>
-            {% endif %}
-          {% endfor %}
-        </div>
-
-        <div class="footer-list">
-          <h1>Services</h1>
-          {% for post in site.posts %}
-          {% if post.service %}
-          <a href="{{ post.url}}">{{ post.service }}</a>
-          {% endif %}
-          {% endfor %}
-          <a href="/profeed/" data-proofer-ignore>Profeed</a>
-          <p>Research</p>
-        </div>
-
-        <div class="footer-list">
-          <h1>Contact</h1>
-          <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-          <a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/"
-            target="_blank" data-proofer-ignore>VAT No.: 39464101</a>
-          <a href="tel:+45 20 872 530">+45 20 872 530</a>
-          <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
-          <p>3450 Allerød</p>
-        </div>
-      </div>
-
-
-      <div class="bottom-bar">
-        <span>© 2019 Prolike</span>
-        <span>
-          <a href="https://twitter.com/prolike5" target="_blank" data-proofer-ignore><i class="fab fa-twitter"></i></a>
-          <a href="#" target="_blank" data-proofer-ignore><i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.instagram.com/prolike_io/" target="_blank" data-proofer-ignore><i
-              class="fab fa-instagram"></i></a>
-          <a href="https://github.com/prolike" target="_blank" data-proofer-ignore><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/company/prolike/" target="_blank" data-proofer-ignore><i
-              class="fab fa-linkedin-in"></i></a>
-        </span>
-      </div>
-    </footer>
+  <div class="right">
+    <a href="https://twitter.com/prolike_io" target="_blank" data-proofer-ignore><i class="fab fa-twitter"></i></a>
+    <a href="#" target="_blank" data-proofer-ignore><i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.instagram.com/prolike_io/" target="_blank" data-proofer-ignore><i class="fab fa-instagram"></i></a>
+    <a href="https://github.com/prolike" target="_blank" data-proofer-ignore><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/company/prolike/" target="_blank" data-proofer-ignore><i class="fab fa-linkedin-in"></i></a>
+    <span>
+      <li><a href="https://goo.gl/maps/Esji6p1mx7x" target="_blank">Allerød Stationsvej 4, 3450 Allerød</a></li>
+      <li><a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/" target="_blank">VAT NUMBER: 39464104</a></li>
+      <li><a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a></li>
+      <li><a href="tel:+45 20 872 530">20 87 25 30</a></li>
+    </span>
+    <p>© 2019 Prolike. All rights reserved.</p>
+  </div>
+</footer>
