--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -48,7 +48,7 @@
         }
 
         p {
-            font-size: 16px;
+            font-size: 1.7vh;
             color: $white;
             line-height: 1.5;
         }
