--- a/_layouts/anything-post.html
+++ b/_layouts/anything-post.html
@@ -9,24 +9,22 @@ layout: page
 {% endif %}
 
 
-<div class="container story-content">
-  <span>
-    <p>{{ page.date | date: "%d. %B, %Y" }}</p>
-    <h1>{{page.title}}</h1>
-    <p>By {{ page.author }}</p>
-  </span>
-  <div class="image-header-bg" style="background-image: url('{{ page.image }}') !important;"></div>
-  <div class="share-icons">
-    <a target="_blank" id="ga-facebook-share-{{ page.title | url_encode }}" href="https://www.facebook.com/sharer.php?u={{ page.url | prepend: site_prefix }}"><i class="fab fa-facebook-f" title="Del på Facebook"></i></a>
-    <a target="_blank" id="ga-twitter-share-{{ page.title | url_encode }}" href="https://twitter.com/share?ref_src=twsrc%5Etfw"><i class="fab fa-twitter" title="Del på Twitter"></i></a>
-    <a target="_blank" id="ga-linkedin-share-{{ page.title | url_encode }}" href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | prepend: site_prefix }}"><i class="fab fa-linkedin-in" title="Del på LinkedIn"></i></a>
-</div>
-
-  {{ page.content }}
-  <section class="signup">
-    <h1>While we have your attention</h1>
+<section class="post">
+  <div class="content">
     <span>
-        {% include components/buttons.html %}
+      <p>{{ page.date | date: "%d. %B, %Y" }}</p>
+      <h1>{{page.title}}</h1>
+      <p>By <a href="{{ page.author-github }}">{{ page.author }}</a></p>
     </span>
+    <div class="image-header-bg" style="background-image: url('{{ page.image }}') !important;"></div>
+    {{ page.content }}
+  </div>
 </section>
-</div>
+
+{% include components/related.html %}
+
+<!-- <div class="share-icons">
+  <a target="_blank" id="ga-facebook-share-{{ page.title | url_encode }}" href="https://www.facebook.com/sharer.php?u={{ page.url | prepend: site_prefix }}"><i class="fab fa-facebook-f" title="Del på Facebook"></i></a>
+  <a target="_blank" id="ga-twitter-share-{{ page.title | url_encode }}" href="https://twitter.com/share?ref_src=twsrc%5Etfw"><i class="fab fa-twitter" title="Del på Twitter"></i></a>
+  <a target="_blank" id="ga-linkedin-share-{{ page.title | url_encode }}" href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | prepend: site_prefix }}"><i class="fab fa-linkedin-in" title="Del på LinkedIn"></i></a>
+</div> -->
