--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -17,7 +17,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
     }
 
     .card-body {
@@ -80,106 +80,7 @@
     }
 }
 
-// individual story site
-
-.story-content {
-    width: 910px;
-    padding: 15vh 0 10vh 0;
-    margin-bottom: 100px;
-
-    .share-icons {
-        width: auto;
-        margin: 0;
-        padding: 0;
-
-        a {
-            margin-right: 15px;
-        }
-
-        .fab {
-            color: black;
-            opacity: 0.5;
-            font-size: 25px;
-        }
-
-        .fab:hover {
-            color: $prolikeyellow;
-        }
-    }
-
-
-
-    img {
-        margin-left: auto;
-        margin-right: auto;
-        object-fit: contain;
-        display: block;
-        margin: 25px 0;
-    }
-
-    h1 {
-        padding-bottom: 0;
-        text-transform: uppercase;
-        font-size: 48px;
-        line-height: 60px;
-        font-weight: 700;
-        padding: 10px 0;
-        margin: 0;
-        font-family: 'Oswald', sans-serif;
-    }
-
-    h2 {
-        padding: 20px 0 10px 0;
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: 600;
-    }
-
-    h3 {
-        padding: 25px 0 0 0;
-        font-weight: 700;
-        text-transform: uppercase;
-        font-size: 25px !important;
-        font-family: 'Oswald', sans-serif;
-    }
-
-    h4 {
-        padding: 20px 0 10px 0;
-        font-weight: bold;
-        font-size: 15px !important;
-        text-transform: uppercase;
-    }
-
-    hr {
-        min-width: 100% !important;
-        opacity: .5;
-    }
-
-    a {
-        color: #4B504C;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-
-    h1 {
-        text-transform: uppercase;
-    }
-
-    p {
-        font-size: 16px;
-        line-height: 24px;
-        margin: 0;
-    }
-}
-
-.image-header-bg {
-    height: 500px;
-    width: 100%;
-    margin: 35px 0 50px 0;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
 
 @media only screen and (max-width: 1500px) {
 
@@ -195,17 +96,9 @@
     }
 }
 
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
 @media only screen and (max-width: 1200px) {
-
-    .story-content {
-        width: 910px;
-        padding: 15vh 0 10vh 0;
-        margin-bottom: 100px;
-
-        ul {
-            padding: 1vh 0 1vh 5vh;
-        }
-    }
 
     .posts-container {
 
@@ -216,11 +109,7 @@
         .events-image {
             height: 30vh;
         }
-
-
     }
-
-
 }
 
 /* Small devices (phones, 768px and down) */
@@ -264,16 +153,5 @@
 
             }
         }
-    }
-
-    .image-header-bg {
-        max-width: 100%;
-        height: 325px !important;
-    }
-
-    .story-content {
-        max-width: 95% !important;
-        margin: 0 auto;
-        padding-top: 15vh !important;
     }
 }
