close #452 revamp contact page

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -21,7 +21,7 @@
 <footer>
   <hr>
   <div class="left">
-    <h1>Are <a class="yellow-text" href="/flow/">you</a> our next aqquantince?<br>Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or come <a class="yellow-text" href="/callme/">swing by</a> for a chat!</h1>
+    <h1>Are <a class="yellow-text" href="/stories/flow/">you</a> our next aqquantince?<br>Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or come <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h1>
     <span>
       {% assign sorted_navi = site.pages | sort: 'order' %}
       {% for page in sorted_navi %}
@@ -30,7 +30,6 @@
       {% endif %}
       {% endfor %}
       <li><a href="#" data-proofer-ignore>Partners</a></li>
-      <li><a href="/callme/">Contact</a></li>
     </span>
   </div>
 
