--- a/_layouts/flow.html
+++ b/_layouts/flow.html
@@ -1,11 +1,9 @@
 ---
-title: Flow
-layout: callme
+layout: page
 ---
 
 <div id="fullpage" class="container-fluid slide-container">
 
-   
     <section class="slide section">
          <div class="row justify-content-center">
             <div class="col-lg-8 col-xs-8 slide1">
@@ -15,7 +13,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger2"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide2">
@@ -26,7 +23,6 @@ layout: callme
         </div>
     </section>
 
-   
     <section class="slide section">
          <div id="trigger3"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide3">
@@ -38,7 +34,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger4"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide4">
@@ -49,7 +44,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger5"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide5">
@@ -63,7 +57,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger6"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide6">
@@ -74,7 +67,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger7"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide7">
@@ -86,7 +78,6 @@ layout: callme
         </div>
     </section>
 
-    
     <section class="slide section">
         <div id="trigger8"></div><div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide8">
@@ -98,5 +89,4 @@ layout: callme
             </div>
         </div>
     </section>
-    
 </div>
