--- a/css/main.scss
+++ b/css/main.scss
@@ -18,8 +18,7 @@
 
 @import "pages/anything-post.scss";
 @import "pages/anything.scss";
-@import "pages/bootcamp.scss";
-@import "pages/connect.scss";
+@import "pages/contact.scss";
 @import "pages/flow.scss";
 @import "pages/services.scss";
 @import "pages/stories.scss";
