--- a/_layouts/anything.html
+++ b/_layouts/anything.html
@@ -12,14 +12,9 @@ layout: page
   <div class="wrapper">
     {% for post in site.posts%}
     <div class="story-card">
-      <a href="{{ post.url }}">
-        <div class="card-img-top" style="background-image: url('{{ post.image }}')"></div>
-      </a>
-
+      <a href="{{ post.url }}"><div class="card-img-top" style="background-image: url('{{ post.image }}')"></div></a>
       <div class="card-body">
-        <a href="{{ post.url }}">
-          <h5>{{ post.title }}</h5>
-        </a>
+        <a href="{{ post.url }}"><h5>{{ post.title }}</h5></a>
         <p class="card-text">{{ post.description }}</p>
         <p class="author-text"><span class="date-span">By <a href="{{ post.author-github }}" target="_blank">{{ post.author }}</a></span></p>
       </div>
