--- a/_sass/pages/_flow.scss
+++ b/_sass/pages/_flow.scss
@@ -5,7 +5,7 @@
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
-   // scroll-snap-align: start;
+    // scroll-snap-align: start;
 
     h1 {
         font-weight: bold;
@@ -45,12 +45,10 @@
         text-align: center;
     }
 
-    a, a:hover {
+    a,
+    a:hover {
         text-decoration: none;
         color: $prolikeyellow;
     }
 
-
-    
- 
 }
