--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -43,7 +43,7 @@ layout: page
                     <h2>{{ service.title }}</h2>
                 </div>
                 <div class="col-12">
-                    <p>{{ service.content }}</p>
+                    {{ service.content | markdownify }}
                 </div>
                 <div class="col-12">
                     <div class="row justify-content-center">
