close #455 change link to at the end of stories

--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -13,7 +13,7 @@ layout: page
                     {% for heading in section.headings %}<h1>{{ heading }}</h1>{% endfor %}</div>
                 <div class="texts{{ forloop.index0 }}">{% for text in section.texts %}<p>{{ text }}</p>{% endfor %}
                     {% if forloop.last %}
-                    <p><a class="back-things" href="/stories/"><i class="fas fa-arrow-left"></i> Back to stories</a>
+                    <p><a class="back-things" href="/anything/"><i class="fas fa-arrow-left"></i> Back to anything</a>
                         {% endif %}</p>
                 </div>
             </div>
