--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -48,9 +48,15 @@ layout: page
                 <div class="col-12">
                     <div class="row justify-content-center">
                         <div class="col-lg-3 col-md-3 col-6">
+                            {% if service.change == true %}
+                            <a href="{{ service.internal-link }}" class="btn call btn-light btn-xl">
+                                {{ service.button }}
+                            </a>
+                            {% else %}
                             <a href="{{ service.url }}" class="btn call btn-light btn-xl">
                                 {{ service.button }}
                             </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
