--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -92,6 +92,19 @@
         }
     }
 
+    #popup {
+        width: 100%;
+        height: 50vh;
+        margin: 0 auto;
+        border: 1px solid rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 0px 0px 0px black;
+        //display: none;
+      }
+      #popup iframe {
+        width: 100%;
+        height: 100%
+      }
+
     .service-info:last-of-type {
         border-bottom: 1px solid rgba(0, 0, 0, 0.25);
     }
