close #464 create more text for the website service

--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -49,7 +49,7 @@ layout: page
                 </div>
 
                 <div class="col-12">
-                    {% if service.title == "website" %}
+                    {% if service.title == "4995 kr. website" %}
                     <div id="popup">
                         <iframe id="popupFrame" src="https://jekyllthemes.io/" frameBorder="0"></iframe>
                     </div>
