--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -4,6 +4,11 @@
     width: auto;
     align-items: center;
 
+    .row {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
     .service-heading {
         margin-left: auto;
         margin-right: auto;
@@ -96,6 +101,7 @@
         width: 100%;
         height: 50vh;
         margin: 0 auto;
+        margin-bottom: 5vh;
         border: 1px solid rgba(0, 0, 0, 0.25);
         box-shadow: 0px 0px 0px 0px black;
         //display: none;
@@ -119,6 +125,10 @@
 @media only screen and (max-width: 1024px) {
     .service {
         padding: 10vh 5vh;
+
+        #popup {
+            height: 90vh;
+          }
 
         .service-boxes {
 
