--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -48,7 +48,7 @@ layout: page
                     {{ service.content | markdownify }}
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 pop">
                     {% if service.title == "4995 kr. website" %}
                     <div id="popup">
                         <iframe id="popupFrame" src="https://jekyllthemes.io/" frameBorder="0"></iframe>
@@ -59,7 +59,7 @@ layout: page
                 <div class="col-12">
                     <div class="row justify-content-center">
 
-                        <div class="col-lg-3 col-md-3 col-6">
+                        <div class="col-lg-4 col-md-3 col-6">
                             {% if service.change == true %}
                             <a href="{{ service.internal-link }}" class="btn call btn-light btn-xl">
                                 {{ service.button }}
@@ -80,5 +80,9 @@ layout: page
         {% endfor %}
     </div>
 
-    {% include components/buttons.html %}
+    <div class="row">
+        <div class="col-12">
+            {% include components/buttons.html %}
+        </div>
+    </div>
 </div>
