--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -22,10 +22,12 @@ layout: page
         {% if service.operational == true %}
         <div class="col-lg-3 col-md-4 col-12">
             <div class="service-box">
-                <a class="post-link" href="#{{ service.title }}">
-                    <i class="{{ service.icon }} service-icon"></i>
-                    <h4>{{ service.title }}</h4>
-                </a>
+                <div class="box">
+                    <a class="post-link" href="#{{ service.title }}">
+                        <i class="{{ service.icon }} service-icon"></i>
+                        <h4>{{ service.title }}</h4>
+                    </a>
+                </div>
             </div>
         </div>
         {% endif %}
