--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -33,9 +33,13 @@
             background-color: $prolikeblue;
             padding: 15px;
             margin: 30px;
-            height: 25vh;
-            width: 25vh;
+            height: 250px;
+            width: 100%;
             border-radius: 10px;
+
+            .box {
+                margin-top: 30px;;
+            }
 
             .post-link,
             .post-link:hover {
@@ -89,6 +93,7 @@
         }
 
         .btn {
+            width: 100%;
             color: white;
 
             &:hover {
@@ -137,8 +142,8 @@
         .service-boxes {
 
             .service-box {
-                width: 100%;
-                height: 20vh;
+                width: auto;
+                height: 250px;
                 margin: unset;
                 margin-top: 30px;
             }
@@ -156,8 +161,8 @@
         .service-boxes {
 
             .service-box {
-                width: 100%;
-                height: 30vh;
+                width: auto;
+                height: 250px;
                 margin: unset;
                 margin-top: 30px;
             }
