close #469 fix google form for 5k website

--- a/_sass/miscellaneous/_forms.scss
+++ b/_sass/miscellaneous/_forms.scss
@@ -1,6 +1,17 @@
 .ourGoogleFormContainer {
     padding-top: 80px;
-    height: auto;
+    height: 240vh;
+
+    iframe {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .ourGoogleFormContainer {
+        height: 400vh;
+    }
 }
 
 .ourGoogleForm {
