--- a/_layouts/services-post.html
+++ b/_layouts/services-post.html
@@ -5,5 +5,5 @@ layout: page
 <div class="container-fluid ourGoogleFormContainer">
     <iframe class="ourGoogleForm"
         src="{{ page.form }}"
-        width="640" height="{{ page.form-height }}" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
+        width="640" frameborder="0" marginheight="0" marginwidth="0" scrolling="yes">Loading…</iframe>
 </div>
