--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div class="service">
+<div class="services">
 
     <div class="row">
         <div class="col-lg-6 col-12">
@@ -21,73 +21,17 @@ layout: page
         {% for service in site.services %}
         {% if service.operational == true %}
         <div class="col-lg-3 col-md-4 col-12">
-            {% if service.change == true%}
-            <a href="{{ service.internal-link }}">
-                <div class="service-box">
-                    <i class="{{ service.icon }} service-icon"></i>
-                    <h4>{{ service.title }}</h4>
-                </div>
-            </a>
-            {% else %}
             <a href="{{ service.url }}">
                 <div class="service-box">
                     <i class="{{ service.icon }} service-icon"></i>
                     <h4>{{ service.title }}</h4>
                 </div>
             </a>
-            {% endif %}
         </div>
         {% endif %}
         {% endfor %}
 
     </div>
-
-    <!-- <div class="row justify-content-center" style="position: relative;">
-        {% for service in site.services %}
-        {% if service.operational == true %}
-        <div class="service-info col-lg-8 col-11">
-            <div id="{{ service.title }}" class="idk"></div>
-            <div class="row justify-content-center">
-
-                <div class="col-12">
-                    <h2>{{ service.title }}</h2>
-                </div>
-
-                <div class="col-12">
-                    {{ service.content | markdownify }}
-                </div>
-
-                <div class="col-12 pop">
-                    {% if service.title == "4995 kr. website" %}
-                    <div id="popup">
-                        <iframe id="popupFrame" src="https://jekyllthemes.io/" frameBorder="0"></iframe>
-                    </div>
-                    {% endif %}
-                </div>
-
-                <div class="col-12">
-                    <div class="row justify-content-center">
-
-                        <div class="col-lg-4 col-md-3 col-6">
-                            {% if service.change == true %}
-                            <a href="{{ service.internal-link }}" class="btn call btn-light btn-xl">
-                                {{ service.button }}
-                            </a>
-                            {% else %}
-                            <a href="{{ service.url }}" class="btn call btn-light btn-xl">
-                                {{ service.button }}
-                            </a>
-                            {% endif %}
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-    </div> -->
 
     <div class="row">
         <div class="col-12">
