close #475 replace request for boards on boards page with the new api

--- a/_layouts/boards.html
+++ b/_layouts/boards.html
@@ -2,15 +2,23 @@
 layout: page
 sitemap: false
 ---
-<div class="container boards">
-    <div class="row justify-content-center">
-        <div class="col-lg-8 col-xs-12 userlogin">
-            <h3>Available boards for <span class="username"></span></h3>
-        </div>
-    </div>
-
-    <div class="row button justify-content-center">
-    </div>
+<div class="boards">
+<div class="workspaces">
+    <div class="sk-circle">
+        <div class="sk-circle1 sk-child"></div>
+        <div class="sk-circle2 sk-child"></div>
+        <div class="sk-circle3 sk-child"></div>
+        <div class="sk-circle4 sk-child"></div>
+        <div class="sk-circle5 sk-child"></div>
+        <div class="sk-circle6 sk-child"></div>
+        <div class="sk-circle7 sk-child"></div>
+        <div class="sk-circle8 sk-child"></div>
+        <div class="sk-circle9 sk-child"></div>
+        <div class="sk-circle10 sk-child"></div>
+        <div class="sk-circle11 sk-child"></div>
+        <div class="sk-circle12 sk-child"></div>
+      </div>
+</div>
 </div>
 
 <script src="/js/getBoard.js"></script>
