close #482 remake the board site

--- a/_sass/miscellaneous/_customer.scss
+++ b/_sass/miscellaneous/_customer.scss
@@ -1,4 +1,6 @@
-.projects {
+
+
+/* .projects {
     background-color: whitesmoke;
     padding: 50px 0;
 
@@ -256,4 +258,4 @@
         }
     }
     
-}
+} */
