close #485 create the new page and first part of the form

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@
 @import "pages/stories.scss";
 @import "pages/profeedSignup.scss";
 @import "pages/events.scss";
+@import "pages/dillyDally.scss";
 
 // Miscellaneous: All the stuff we can't define just yet
 
