close #487 create the last part of the forms

--- a/_layouts/DillyDally.html
+++ b/_layouts/DillyDally.html
@@ -5,42 +5,42 @@ layout: page
 <div class="container dillyDally">
     <div class="row justify-content-center">
 
-        <div class="col-8">
+        <div class="col-lg-8 col-12">
             <h1>Dilly Dally Time logging</h1>
         </div>
 
         <from class="col-12">
             <div class="row justify-content-center">
                 
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h4>Day of Work <span>*</span></h4>
                     <p>Date</p>
                     <input type="date" name="dayOfWork" required>
                 </div>
         
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h4>Start time <span>*</span></h4>
                     <p>HH:MM</p>
                     <input type="time" name="starTime" required>
                 </div>
         
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h4>Work Duration <span>*</span></h4>
                     <p>HH:MM</p>
                     <input type="time" name="workDuration" required>
                 </div>
         
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h4>Related to a GitHub issue <span>*</span></h4>
                     <input type="radio" name="issue" id="issue_yes" value="yes" checked required> Yes <br>
                     <input type="radio" name="issue" id="issue_no" value="no"> no <br>
                 </div>
 
-                <div class="col-8" id="btn">
-                    <button class="btn" onclick="githubIssue();">Next</button>
+                <div class="col-lg-8 col-12" id="btn">
+                    <button class="btn" onclick="githubIssue();">Continue</button>
                 </div>
 
-                <div id="response" class="col-8">
+                <div id="response" class="col-lg-8 col-12">
 
                 </div>
 
