--- a/_sass/pages/_dillyDally.scss
+++ b/_sass/pages/_dillyDally.scss
@@ -1,5 +1,5 @@
 .dillyDally {
-    padding: 20vh;
+    padding: 20vh 5vh;
 
     .col-12 {
         padding: 0;
@@ -13,7 +13,7 @@
         margin-bottom: 2vh;
     }
 
-    input[type=date], [type=time] {
+    input[type=date], [type=time], [type=text], .dropdown {
         width: 100%;
         height: 50px;
         border-radius: 2px;
@@ -34,5 +34,12 @@
     span {
         color: crimson;
         font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .row {
+        margin-left: 0px;
+        margin-right: 0px;
     }
 }
